<resources>
    <string name="app_name">Yoozbit</string>
    <string name="txt_splash_version">Ver 1.0.20</string>
    <string name="txt_splash_main">به آینده فکر کن</string>
    <string name="txt_splash_main2">یوزبیت دروازه ای برای ورود به دنیای تجارت الکترونیک</string>
    <string name="txt_splash_site">Yoozbit.com</string>
    <string name="login_activity_username_hint">نام کاربری را وارد کنید</string>
    <string name="login_activity_main_txt">ثبت نام در یوزبیت</string>
    <string name="register_passtxt">کلمه عبور را وارد کنید</string>
    <string name="register_emailtxt">ایمیل را وارد نمایید</string>
    <string name="register_button">عضویت</string>
    <string name="register_phone">شماره موبایل خود را وارد کنید</string>
    <string name="register_passtxt2">تکرار کلمه عبور</string>
    <string name="register_code">کد معرف</string>
    <string name="register_tik">قوانین و شرایط استفاده از یوزبیت را می پذیرم</string>
    <string name="register_before">قبلا در یوزبیت عضو شده اید؟ وارد شوید</string>
    <string name="Login_mainText">ورود به حساب کاربری</string>
    <string name="Login_Registered_Before">هنوز در یوزبیت عضو نشده اید؟ عضو یوزبیت شوید</string>
    <string name="Login_username_hint">نام کاربری، ایمیل یا شماره موبایل را وارد کنید</string>
    <string name="Login_btn">ورود</string>
    <string name="Forget_Password_main">بازیابی کلمه عبور</string>
    <string name="Forget_Password_txt">کلمه عبور خود را بازیابی کنید</string>
    <string name="Register_Yoozbit">هنوز در یوزبیت ثبت نام نکرده اید؟ همین حالا عضو یوزبیت شوید</string>
    <string name="Login_Yoozbit">در یوزبیت حساب کاربری دارید؟ وارد شوید</string>
    <string name="Forget_Password">کلمه عبور خود را فراموش کرده اید؟</string>

</resources>
