<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Forget_Password_main"
                android:textColor="@color/colorWhite"
                android:textSize="35sp"
                android:padding="30dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password_txt"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginTop="45dp"/>

        <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/registerfield_style"
                    android:hint="@string/register_emailtxt"
                    android:textColorHint="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/forget_email_edt"
                        android:gravity="start"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="120dp"
            android:background="@drawable/register_button_style"
            android:text="@string/Forget_Password_main"
            android:padding="15dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Yoozbit"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_Yoozbit"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginTop="20sp"/>

    </LinearLayout>

</RelativeLayout>