<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo3" />


            <TextView
                android:id="@+id/Login_mainText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/login_img"
                android:layout_toRightOf="@+id/login_img"
                android:paddingTop="20dp"
                android:text="@string/Login_mainText"
                android:textColor="@color/colorWhite"
                android:textSize="28sp" />

        </RelativeLayout>

        <TextView
            android:layout_below="@+id/Login_mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login_Registered_Before"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/registerfield_style"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:hint="@string/Login_username_hint"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:gravity="start"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="10dp"
                android:background="@drawable/registerfield_style"
                android:hint="@string/register_passtxt"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:gravity="start"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="20dp"
            android:layout_marginRight="12dp"/>

        <Button
            android:id="@+id/Login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:text="@string/Login_btn"
            android:background="@drawable/register_button_style"
            android:textSize="25dp"/>


    </LinearLayout>


</RelativeLayout>